force-app/main/default/objects/ERA_Accommodation_Booking__c/ERA_Accommodation_Booking__c.object-meta.xml
<CustomObject>
    <label>ERA Accommodation Booking</label>
    <nameField>
        <displayFormat>BKG-{0000}</displayFormat>
        <label>Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERA Accommodation Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>