force-app/main/default/objects/ERA_Accommodation_Booking__c/fields/Check_In__c.field-meta.xml
<CustomField>
    <fullName>Check_In__c</fullName><label>Check In</label><required>false</required><type>Date</type>
</CustomField>