force-app/main/default/objects/ERA_Accommodation_Booking__c/fields/Check_Out__c.field-meta.xml
<CustomField>
    <fullName>Check_Out__c</fullName><label>Check Out</label><required>false</required><type>Date</type>
</CustomField>