force-app/main/default/objects/ERA_Accommodation_Booking__c/fields/Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Dispatch__c</fullName><label>Dispatch</label>
    <referenceTo>ERA_Dispatch__c</referenceTo>
    <relationshipLabel>Accommodation Bookings</relationshipLabel>
    <relationshipName>Accommodation_Bookings</relationshipName>
<type>Lookup</type>
</CustomField>