force-app/main/default/objects/ERA_Accommodation_Booking__c/fields/Hotel_Address__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Address__c</fullName><label>Hotel Address</label>
    <length>255</length><required>false</required><type>Text</type><unique>false</unique>
</CustomField>