force-app/main/default/objects/ERA_Accommodation_Booking__c/fields/Hotel_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name__c</fullName><label>Hotel Name</label>
    <length>200</length><required>false</required><type>Text</type><unique>false</unique>
</CustomField>