force-app/main/default/objects/ERA_Accommodation_Booking__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName><label>Member</label>
    <deleteConstraint>Restrict</deleteConstraint>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ERA Accommodation Bookings</relationshipLabel>
    <relationshipName>ERA_Accommodation_Bookings</relationshipName>
    <required>true</required><type>Lookup</type>
</CustomField>