force-app/main/default/objects/ERA_Accommodation_Booking__c/fields/Nightly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Nightly_Rate__c</fullName><label>Nightly Rate</label>
    <precision>8</precision><scale>2</scale><required>false</required><type>Currency</type>
</CustomField>