force-app/main/default/objects/ERA_Accommodation_Booking__c/fields/Policy_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Policy_Allowance__c</fullName><label>Policy Allowance (per night)</label>
    <precision>8</precision><scale>2</scale><required>false</required><type>Currency</type>
</CustomField>