force-app/main/default/objects/ERA_Accommodation_Booking__c/fields/Rooms__c.field-meta.xml
<CustomField>
    <fullName>Rooms__c</fullName><label>Rooms</label>
    <precision>2</precision><scale>0</scale><required>false</required><type>Number</type><unique>false</unique>
</CustomField>