force-app/main/default/objects/ERA_Accommodation_Booking__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName><label>Total Cost</label>
    <formula>Nightly_Rate__c * (Check_Out__c - Check_In__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision><scale>2</scale><type>Currency</type>
</CustomField>